--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-font-family: 'Cambria', Cochin, Georgia, Times, 'Times New Roman', serif;
+font-family: Arial, Helvetica, sans-serif;
 background: black;
 color: white;
 }
@@ -8,6 +8,26 @@ h1 {
     color: rgb(88, 88, 182);
     font-size: 50px;
 }
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+h4 {
+    font-size: 25px;
+}
+
+p {
+    font-size: 20px;
+}
+li {
+    font-size: 18px;
+}
+
 a {
     color: white;
     font-size: 20px;
